* Repository head
  Port tests now pass on all Debian supported architectures, including
  the Sparc and s390 that were giving us trouble before.

* Wed 23 May 2012 Eric S. Raymond <esr@snark.thyrsus.com> - 3.6
  It's the Fernando Poo Day release.  Code has zero detectible defects
  under Coverity scanning and cppcheck 1.52; this is mainly a cleanup
  release to get those minor fixes into the field.  If a leap-second
  warning is available from GPS subframe information it is passed to
  ntpd. NMEA2000 is now supported via the Linux kernel CAN interface.
  There's a chrpath=no config option for distribution makers, so
  chrpath is no longer a build dependency; see build.txt for
  explanation.

* Sat 14 Apr 2012 Eric S. Raymond <esr@snark.thyrsus.com> - 3.5
  Use pselect when it's available to cut down on wakeups and improve
  signal handling.  New {PPS} message exporting clock drift. The AIVDM
  driver now handles up to 16 interleaved 24A and 24B pair-halves.
  The NMEA driver interprets depth-sounder returns from SDDBT and
  reports them as negative altitudes. The pps-pin option is gone, the
  PPS code now just accepts any handshake pin. A bug that sometimes
  caused RTCM packets to be dropped rather than relayed is fixed.

* Thu 12 Jan 2012 Eric S. Raymond <esr@snark.thyrsus.com> - 3.4
  Don't barf when chrpath is not available, fall back to static linking;
  helps people not running Linux.

* Sat Oct 29 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.3
  Improvements to build and release-procedure documentation. Make
  sirf=no build work again. Main reason for this release is to make
  chrpath a mandatory build depedency and explain why in the build
  documentation.

* Wed Oct 25 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.2 
  In the build recipe, (1) set pkgconfig properly for 64-bit Fedora
  systems, (2) clean up various derived files including *.pyc on scons
  -c, (3) add an option to disable stripping of binaries (strip=no),