@@ -650,9 +650,10 @@ packaging = mouse
 uses = Zodiac
 interfaces = RS-232
 discontinued = True
-rating = broken
+rating = good
 notes = This device was supported by GPSD up to release 2.96, but some bug
-      introduced after that interfered with it.
+      introduced after that interfered with it until support was restored
+      after 3.6.
 
 [TripMate]
 type = device
